# KSFGHAction.py

./: action.sh  action.yml  setup.cfg  startBash.js
.ci/: pythonPackagesToInstallFromGit.txt
.github/workflows/: issues_lint.yml
KSFGHAction/: __init__.py  __main__.py  issueParser.py  linter.py  validator.py
